# symbolic-regression-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plot.p
dep/include/: mtwist.h
dep/src/: mtwist.c
include/: algorithm.h  file_io.h  global_memory.h  individual.h  node.h  population.h
src/: file_io.c  global_memory.c  individual.c  main.c  node.c  population.c
test/: test_individual.c  test_node.c  test_population.c
