CMAKE_MINIMUM_REQUIRED(
    VERSION 2.8
)

PROJECT(
    symbolic-regression
)

IF( DEBUG_ON )
    SET( DEBUG_FLAGS -pg )
ENDIF()

FILE( 
    GLOB 
    INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h 
) 

FILE( 
    GLOB 
    SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c INCLUDES
) 

FILE( 
    GLOB 
    TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/test/*.c 
)

SET(
    SRC_LIB
    symbolic-regression-lib
)

SET(
    CMAKE_LIBRARY_OUTPUT_DIRECTORY 
    ${CMAKE_CURRENT_SOURCE_DIR}/lib
)

SET(
    CMAKE_ARCHIVE_OUTPUT_DIRECTORY 
    ${CMAKE_CURRENT_SOURCE_DIR}/lib 
    )

SET(
    CMAKE_RUNTIME_OUTPUT_DIRECTORY 
    ${CMAKE_CURRENT_SOURCE_DIR}/bin
)

SET( 
    INCLUDE_DIR 
    ${CMAKE_CURRENT_SOURCE_DIR}/include
) 

SET( 
    TEST_LIB 
    test-symbolic-regression-c 
)

SET(
    TEST_LIB_NAME
    lib${TEST_LIB}.so
)

INCLUDE_DIRECTORIES(
    ${INCLUDE_DIR}
)

ADD_LIBRARY(
    ${TEST_LIB}
    SHARED
    ${TEST_SRCS}
)

ADD_LIBRARY(
    ${SRC_LIB}
    STATIC
    ${SRCS}
)

ADD_DEFINITIONS(
    -std=c99
    -fPIC
    ${DEBUG_FLAGS}
)

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${SRCS}
)

TARGET_INCLUDE_DIRECTORIES(
    ${PROJECT_NAME}
    PUBLIC
    ${INCLUDE_DIR}    
)

TARGET_LINK_LIBRARIES( 
    ${PROJECT_NAME}
    m
    ${DEBUG_FLAGS}
    -fPIC
)

TARGET_INCLUDE_DIRECTORIES(
    ${TEST_LIB}
    PUBLIC
    ${INCLUDE_DIR}    
    -fPIC
)

TARGET_LINK_LIBRARIES( 
    ${TEST_LIB}
    ${SRC_LIB}
    cgreen
)

ADD_CUSTOM_TARGET(
    test
    DEPENDS ${PROJECT_NAME}
    COMMAND 
    cgreen-runner --colours ${CMAKE_CURRENT_SOURCE_DIR}/lib/${TEST_LIB_NAME}
)

